# flex-template-example

./: README.md
examplelib/: Earthfile  pyproject.toml
examplelib/examplelib/: example.py
lib/: pyproject.toml
pipeline/: Earthfile  entry.sh  pipeline_metadata.json  pyproject.toml
pipeline/src/: other_file.py  pipeline.py
