[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Felix Qvist <felix.qvist@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
apache-beam = {version = "^2.49.0", extras = ["gcloud"]}
pandas = "^2.0.3"
examplelib = {path = "../examplelib", develop = true}

[tool.poetry.scripts]
start = "src.pipeline:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
